--- a/styles.css
+++ b/styles.css
@@ -19,15 +19,13 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
@@ -42,9 +40,11 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+
+
+*{
+	margin: 0;
+	padding: 0;
 }
 
 #production-pie-chart {
@@ -52,3 +52,27 @@ table {
     height:50%;
 }
 
+#title { /* using flexbox to center title within #title */
+	max-width:100%;
+	height: 100vh;
+	background-image:url("assets/title.jpg");
+	background-position: center center;
+	background-repeat: no-repeat;
+	display: flex;
+	justify-content: center;
+	align-items: center ;
+	filter: sepia(100%);
+	filter: blur(5px);
+
+}
+
+title {
+display: flex;
+justify-content: center;
+text-align: center;
+color:white;
+}
+
+#deforestation-container{
+	width:100%;
+}
