--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ time, mark, audio, video {
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-	display: block;
+	display: flex; /* I feel most confident using flexbox */
 }
 
 body {
@@ -45,34 +45,56 @@ q:before, q:after {
 *{
 	margin: 0;
 	padding: 0;
-}
-
-#production-pie-chart {
-    width:50%;
-    height:50%;
+	box-sizing:border-box; /*easier to calculate margins and padding */
 }
 
 #title { /* using flexbox to center title within #title */
-	max-width:100%;
+	max-width:100vw;
 	height: 100vh;
 	background-image:url("assets/title.jpg");
 	background-position: center center;
 	background-repeat: no-repeat;
+	background-attachment: fixed; /*create somewhat of a parallax scrolling effect to keep reader engaged*/
 	display: flex;
 	justify-content: center;
 	align-items: center ;
-	filter: sepia(100%);
 	filter: blur(5px);
 
 }
 
 title {
-display: flex;
-justify-content: center;
-text-align: center;
-color:white;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	color: white;
+	filter: blur(0px);
 }
 
 #deforestation-container{
 	width:100%;
+}
+
+
+#production-pie-chart {
+	background-color: rgba(209, 209, 209, 0.5);
+	border-radius: 10px;
+	overflow: hidden;    /* hide any content that goes beyond the rounded corners*/
+	padding:10px;
+	min-height:50vh;
+}
+
+#introText, #production-pie-chart {
+	margin:2em;
+	width:50%;
+}
+
+h1{
+	width:100%;
+	text-align: center;
+}
+
+
+#doubleChloro{
+	display:flex; /* to display graphs side by side*/
+	justify-content: space-evenly;
 }
