--- a/styles.css
+++ b/styles.css
@@ -52,8 +52,9 @@ q:before, q:after {
 #title { /* using flexbox to center title within #title */
 	width:100%;
 	height: 100vh;
-	background-image:url("assets/chris-charles-MTh5767B1rs-unsplash.jpg");
+	background-image:url("assets/simone-millward-b6Qx5PKHS3k-unsplash.jpg");
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -61,9 +62,7 @@ q:before, q:after {
 	flex-direction: column;
 	background-size: cover;
 	background-position-y: 70%;
-	
 }
-
 
 .tint {
 	background-color: rgba(0,0,0,.4);
@@ -139,13 +138,17 @@ q:before, q:after {
 }
 
 p {
-	line-height:120%;
+	line-height:1.2;
 }
 
 
 .card h2, .cardCol h2 {
 	margin-bottom:1rem
 
+}
+
+.card h3, .cardCol h3 {
+	margin:1rem 0 0.75rem 0;
 }
 
 figcaption{
@@ -176,7 +179,7 @@ h1{
 	width:100%;
 	background-color: white;
 	text-align: center;
-	padding: 4em 0;
+	padding: 4em;
 	color: rgb(158, 44, 44);
 	font-weight: bold;
 	line-height: 1.2;
@@ -191,20 +194,25 @@ h2{
 h2 a{
 	font-weight:bold;
 	font-family: Noto Sans;
-	color: rgb(158, 44, 44);
+	color: rgb(234, 117, 0);
 
 }
-
-
 
 #intro { /* using flexbox to center title within #title */
-	background-image:url("assets/title.jpg");
+	background-image:url("assets/chris-charles-MTh5767B1rs-unsplash.jpg");
+	background-repeat: no-repeat;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding:2rem;
+	flex-direction: column;
+	background-size: cover;
+	background-position-y: 70%;
 }
+
 .background{
 	width:100%;
-	background-image:url("assets/title.jpg");
 	background-repeat: no-repeat;
-	background-attachment: fixed; /*create somewhat of a parallax scrolling effect to keep reader engaged*/
 	display: flex;
 	justify-content: center;
 	align-items: center ;
@@ -214,7 +222,32 @@ h2 a{
 	padding: 3em 0;
 }
 
+#palmOilIntro { /* using flexbox to center title within #title */
+	background-image:url("assets/title.jpg");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding:4rem;
+	flex-direction: column;
+	background-size: cover;
+	background-position-y: 70%;
+}
+
 #doubleChloro{
 	display:flex; /* to display graphs side by side*/
 	justify-content: space-evenly;
+	height:80vh;
+}
+
+#expD, #production-chloro {
+
+	width: 50%;
+}
+
+.js-plotly-plot,
+.plot-container {
+	max-width: 50vw;
+          height: 44vh
 }
